// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`documentToReactComponents does not render unrecognized marks 1`] = `
Array [
  <p>
    Hello world!
  </p>,
]
`;

exports[`documentToReactComponents renders asset hyperlink 1`] = `
Array [
  <p>
    
    <span>
      type: 
      asset-hyperlink
       id: 
      9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders blockquotes 1`] = `
Array [
  <p>
    hello
  </p>,
  <blockquote>
    world
  </blockquote>,
]
`;

exports[`documentToReactComponents renders default entry link block 1`] = `
Array [
  <div />,
]
`;

exports[`documentToReactComponents renders embedded entry 1`] = `
Array [
  <p>
    
    <span>
      type: 
      embedded-entry-inline
       id: 
      9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders empty node if type is not recognized 1`] = `
Array [
  <React.Fragment>
    Hello world!
  </React.Fragment>,
]
`;

exports[`documentToReactComponents renders entry hyperlink 1`] = `
Array [
  <p>
    
    <span>
      type: 
      entry-hyperlink
       id: 
      9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders horizontal rule 1`] = `
Array [
  <p>
    hello world
  </p>,
  <hr />,
  <p>
    
  </p>,
]
`;

exports[`documentToReactComponents renders hyperlink 1`] = `
Array [
  <p>
    Some text 
    <a
      href="https://url.org"
    >
      link
    </a>
     text.
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 1`] = `
Array [
  <p>
    <i>
      hello world
    </i>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 2`] = `
Array [
  <p>
    <b>
      hello world
    </b>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 3`] = `
Array [
  <p>
    <u>
      hello world
    </u>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 4`] = `
Array [
  <p>
    <code>
      hello world
    </code>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with the passed custom mark rendered 1`] = `
Array [
  <p>
    <Strong>
      hello world
    </Strong>
  </p>,
]
`;

exports[`documentToReactComponents renders multiple marks with default mark renderer 1`] = `
Array [
  <p>
    <i>
      <b>
        hello world
      </b>
    </i>
  </p>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 1`] = `
Array [
  <p>
    hello world
  </p>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 2`] = `
Array [
  <h1>
    hello world
  </h1>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 3`] = `
Array [
  <h2>
    hello world
  </h2>,
]
`;

exports[`documentToReactComponents renders nodes with passed custom node renderer 1`] = `
Array [
  <Paragraph>
    hello world
  </Paragraph>,
]
`;

exports[`documentToReactComponents renders ordered lists 1`] = `
Array [
  <ol>
    <li>
      <p>
        Hello
      </p>
    </li>
    <li>
      <p>
        world
      </p>
    </li>
  </ol>,
  <p>
    
  </p>,
]
`;

exports[`documentToReactComponents renders unordered lists 1`] = `
Array [
  <ul>
    <li>
      <p>
        Hello
      </p>
    </li>
    <li>
      <p>
        world
      </p>
    </li>
  </ul>,
  <p>
    
  </p>,
]
`;

exports[`nodeListToReactComponents renders children as an array with keys from its index 1`] = `
Array [
  <p>
    <b>
      hello
    </b>
  </p>,
  " ",
  <p>
    world
  </p>,
]
`;

exports[`nodeToReactComponent does not add additional tags on invalid marks 1`] = `"hello world"`;

exports[`nodeToReactComponent renders invalid node types in React fragments 1`] = `
<React.Fragment>
  hello world
</React.Fragment>
`;

exports[`nodeToReactComponent renders valid marks 1`] = `
<b>
  hello world
</b>
`;

exports[`nodeToReactComponent renders valid nodes 1`] = `
<p>
  hello world
</p>
`;
